fix git add -p with delta

--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -116,7 +116,7 @@
 	defaultBranch = master
 
 [interactive]
-	diffFilter = delta --diff-highlight --color-only
+	diffFilter = delta --color-only
 
 [merge]
 	prompt = true
