--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -116,7 +116,7 @@
 	defaultBranch = master
 
 [interactive]
-	diffFilter = delta --color-only
+	diffFilter = delta --color-only --diff-highlight
 
 [merge]
 	prompt = true
