ci: just-format

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -62,7 +62,7 @@ repos:
       - id: shellcheck
         exclude: \.zsh$
   - repo: https://github.com/thiagowfx/pre-commit-hooks
-    rev: c3a722a70322749e660d6ff5bf51f55121315092  # frozen: v0.0.1
+    rev: d99794e0e948ffda5a19e07210f0c1383d66949c  # frozen: v0.0.2
     hooks:
-      - id: format-justfile
+      - id: just-format
   # keep-sorted end
