--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -20,9 +20,6 @@
 ci:
   autoupdate_schedule: monthly
   submodules: true
-  skip:
-    # missing deps: just
-    - just-fmt
 repos:
   - repo: meta
     hooks:
@@ -47,6 +44,10 @@ repos:
     rev: 63c8f8312b7559622c0d82815639671ae42132ac  # frozen: v2.4.1
     hooks:
       - id: codespell
+  - repo: https://github.com/golangci/misspell
+    rev: e78f9b6cd537559a24525b6ea7e182794edfd31f # frozen: v0.7.0
+    hooks:
+      - id: misspell
   - repo: https://github.com/google/keep-sorted
     rev: 3f9cf7d52cc6832a6752433472925981f89d516f  # frozen: v0.6.1
     hooks:
