pre-commit ci: skip just

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -20,6 +20,9 @@
 ci:
   autoupdate_schedule: monthly
   submodules: true
+  skip:
+    # missing deps: just
+    - just-format
 repos:
   - repo: meta
     hooks:
