--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -40,9 +40,9 @@
 	ignore = !curl -L -s "https://www.gitignore.io/api/$@"
 
 	# log: there's also gitk and tig
+	# ll adapted from https://registerspill.thorstenball.com/p/how-i-use-git
 	l = log --graph --pretty=oneline --abbrev-commit --all
-	# ll from https://registerspill.thorstenball.com/p/how-i-use-git
-        ll = "!f() { git log --graph --pretty='tformat:%C(always,yellow)%h%C(always,reset) %C(always,green)%ar%C(always,reset){%C(always,bold blue)%an%C(always,reset){%C(always,red)%d%C(always,reset) %s' \"$@\" | column -t -s '{' | less -XS; }; f"
+	ll = log --graph --pretty=tformat:'%C(always,yellow)%h%C(always,reset) %C(always,green)%<(25,trunc)%ar%C(always,reset) %C(always,bold blue)%<(20,trunc)%an%C(always,reset) %C(always,red)%d%C(always,reset) %s'
 	xl = branch -vv
 
 	# hg/fig/depot_tools compatibility
