--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -40,6 +40,7 @@ repos:
         args:
           - --autofix
           - --no-sort-keys
+        exclude: ^zed/.config/zed/settings.json$
       - id: trailing-whitespace
       # keep-sorted end
   # keep-sorted start
