--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -40,6 +40,9 @@
 	# usage: git ignore go,hugo,vim >> .gitignore
 	ignore = !curl -L -s "https://www.gitignore.io/api/$@"
 
+	# usage: [list | view Go]
+	ignore-gh = !gh repo gitignore
+
 	# log: there's also gitk and tig
 	# ll adapted from https://registerspill.thorstenball.com/p/how-i-use-git
 	l = !git ll
