--- a/git/.mrconfig
+++ b/git/.mrconfig
@@ -14,6 +14,10 @@ checkout = git clone 'git@github.com:thiagowfx/.dotfiles.git' '.dotfiles'
 checkout = git clone 'git@github.com:thiagowfx/.dotfiles_corp.git' '.dotfiles_corp'
 skip = lazy
 
+[workspace/pancake]
+checkout = git clone 'git@github.com:thiagowfx/pancake' 'pancake'
+skip = lazy
+
 [workspace/perrotta.dev]
 checkout = git clone 'git@github.com:thiagowfx/thiagowfx.github.io.git' 'perrotta.dev'
 skip = lazy
