--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -53,6 +53,10 @@ repos:
     rev: 63c8f8312b7559622c0d82815639671ae42132ac  # frozen: v2.4.1
     hooks:
       - id: codespell
+  - repo: https://github.com/gitleaks/gitleaks
+    rev: 39fdb480a06768cc41a84ef86959c07ff33091c4 # frozen: v8.28.0
+    hooks:
+      - id: gitleaks
   - repo: https://github.com/golangci/misspell
     rev: e78f9b6cd537559a24525b6ea7e182794edfd31f # frozen: v0.7.0
     hooks:
