detect-aws-credentials

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -36,6 +36,8 @@ repos:
       - id: check-symlinks
       - id: check-yaml
       - id: detect-aws-credentials
+        args:
+          - --allow-missing-credentials
       - id: detect-private-key
       - id: file-contents-sorter
         files: ^vim/.vim/spell/en.utf-8.add$
