git: switch-to-default, graft

--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -15,15 +15,15 @@
 # keep-sorted start block=yes newline_separated=yes
 [alias]
 	# keep-sorted start
-	bd = !branch="$(git branch --show-current)" && git default && git branch -D "${branch:-$1}"
+	bd = !branch="$(git branch --show-current)" && git switch-to-default && git branch -D "${branch:-$1}"
 	blank = desc -m \"blank commit\"
 	cm = commit
 	co = checkout
 	cp = cherry-pick
 	dc = diff --cached
-	default = !git switch --force main &>/dev/null || git switch --force master
 	desc = commit --allow-empty -n
 	emerge = !git add -A . && git amend -n && git pushm --force-with-lease
+	graft = cherry-pick -n
 	nb = switch --create
 	nbt = !git nb "thiagowfx/$(shuf -n1 /usr/share/dict/words | tr '[:upper:]' '[:lower:]')"
 	prune-gone = !git fetch -p && git branch -vv | awk '/: gone]/{print $1}' | xargs -r git branch -D
@@ -33,6 +33,7 @@
 	rc = rebase --continue
 	st = status
 	su = submodule update
+	switch-to-default = !git switch --force main &>/dev/null || git switch --force master
 	unfreeze = thaw
 	world = !git fetch --all && git remote prune origin && git prune && git prune-gone
 	wt = "!f() { repo=$(basename $(git rev-parse --show-toplevel)); word=$(shuf -n1 /usr/share/dict/words | tr '[:upper:]' '[:lower:]'); path=\"../${repo}-${word}\"; if [ -z \"$1\" ]; then git worktree add -b \"thiagowfx/${word}\" \"$path\"; elif git rev-parse --verify \"$1\" >/dev/null 2>&1; then git worktree add \"$path\" \"$1\"; else git worktree add -b \"$1\" \"$path\"; fi; }; f"
