git: add zsh-defer

--- a/.gitmodules
+++ b/.gitmodules
@@ -139,6 +139,11 @@
 	url = https://github.com/zsh-users/zsh-autosuggestions
 	shallow = true
 
+[submodule "zsh/.zsh/zsh-defer"]
+	path = zsh/.zsh/zsh-defer
+	url = https://github.com/romkatv/zsh-defer.git
+	shallow = true
+
 [submodule "zsh/.zsh/zsh-syntax-highlighting"]
 	path = zsh/.zsh/zsh-syntax-highlighting
 	url = https://github.com/zsh-users/zsh-syntax-highlighting
