--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -55,6 +55,7 @@ repos:
     rev: 63c8f8312b7559622c0d82815639671ae42132ac  # frozen: v2.4.1
     hooks:
       - id: codespell
+        exclude: vim/.vim/autoload/plug.vim
   - repo: https://github.com/gitleaks/gitleaks
     rev: 39fdb480a06768cc41a84ef86959c07ff33091c4 # frozen: v8.28.0
     hooks:
