--- a/git/.mrconfig
+++ b/git/.mrconfig
@@ -18,6 +18,10 @@ checkout = git clone 'git@github.com:thiagowfx/.dotfiles.git' '.dotfiles'
 checkout = git clone 'git@github.com:thiagowfx/.dotfiles_corp.git' '.dotfiles_corp'
 skip = lazy
 
+[workspace/adventofcode]
+checkout = git clone 'git@github.com:thiagowfx/adventofcode' 'adventofcode'
+skip = lazy
+
 [workspace/pancake]
 checkout = git clone 'git@github.com:thiagowfx/pancake' 'pancake'
 
