ghostty: add cursor_tail shader
https://l-o-o-s-e-d.net/kb/terminals/ghostty

https://github.com/sahaj-b/ghostty-cursor-shaders

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,9 @@
 # keep-sorted start newline_separated=yes
+[submodule "vendor/ghostty-cursor-shaders"]
+	path = vendor/ghostty-cursor-shaders
+	url = https://github.com/sahaj-b/ghostty-cursor-shaders
+	shallow = true
+
 [submodule "vendor/grml-etc-core"]
 	path = vendor/grml-etc-core
 	url = https://github.com/grml/grml-etc-core
