--- a/git/.mrconfig
+++ b/git/.mrconfig
@@ -7,10 +7,6 @@ pull = update
 git_xl = git xl "$@"
 jobs = 2
 
-[aports]
-checkout = git clone 'git@gitlab.alpinelinux.org:thiagowfx/aports.git' 'aports'
-skip = lazy
-
 [.dotfiles]
 checkout = git clone 'git@github.com:thiagowfx/.dotfiles.git' '.dotfiles'
 
@@ -20,6 +16,10 @@ skip = lazy
 
 [workspace/adventofcode]
 checkout = git clone 'git@github.com:thiagowfx/adventofcode' 'adventofcode'
+skip = lazy
+
+[workspace/aports]
+checkout = git clone 'git@gitlab.alpinelinux.org:thiagowfx/aports.git' 'aports'
 skip = lazy
 
 [workspace/homebrew-taps]
