Add neovim with lazy.nvim package manager
- Add nvim/.config/nvim/init.lua with full config migration from vim
- Migrate all keymaps, settings, and plugins to Lua
- Add lazy.nvim as submodule for modern package management
- lazy-load vim-easy-align and other optional plugins
- Use neovim-specific paths for cache/undo directories

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,9 @@
 # keep-sorted start newline_separated=yes
+[submodule "nvim/.config/nvim/lazy.nvim"]
+	path = nvim/.config/nvim/lazy.nvim
+	url = https://github.com/folke/lazy.nvim.git
+	shallow = true
+
 [submodule "vendor/ghostty-cursor-shaders"]
 	path = vendor/ghostty-cursor-shaders
 	url = https://github.com/sahaj-b/ghostty-cursor-shaders
