--- a/ghostty/.config/ghostty/config
+++ b/ghostty/.config/ghostty/config
@@ -24,4 +24,5 @@ macos-icon = chalkboard
 mouse-hide-while-typing = true
 shell-integration-features = no-cursor
 theme = Gruvbox Dark
+window-new-tab-position = end
 # keep-sorted end
