lf, ranger: streamline

--- a/ranger/.config/ranger/rc.conf
+++ b/ranger/.config/ranger/rc.conf
@@ -8,8 +8,7 @@ alias remove delete
 set draw_borders separators
 
 # Show hidden files. Shortcut: 'zh'.
-setlocal path=~/.dotfiles show_hidden true
-setlocal path=~/.dotfiles_corp show_hidden true
+set show_hidden true
 
 # Edit file: Set 'e' in addition to 'E'.
 map e edit_file
