move schemas to vendor/schemas

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -19,7 +19,7 @@
 #   $ pre-commit run --all-files
 
 # Vendored files
-exclude: "^schemas/"
+exclude: "^vendor/schemas/"
 ci:
   autoupdate_schedule: monthly
   submodules: true
