tmux: update theme

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -140,10 +140,12 @@ bind _ attach -c '#{pane_current_path}' \; display "Changed start directory to #
 bind g set status
 
 # Set message style, i.e. <prefix> :
-set -g message-style fg=yellow,bg=black,bright
+# One Dark colors: accent=61afef (blue), background=282c34, text=abb2bf
+set -g message-style fg=colour33,bg=colour235,bright
 
 # Set status bar style.
-set -g status-style fg=white,bg=default,bright
+# One Dark: fg=abb2bf (white), bg=282c34 (dark)
+set -g status-style fg=colour145,bg=colour235,bright
 
 # Set status bar size.
 set -g status-left-length 45
@@ -152,24 +154,24 @@ set -g status-right-length 65
 # Set status bar content.
 #  #[default]
 #  #[dim]
-set -g status-left "#[fg=cyan]@#H  "
+set -g status-left "#[fg=colour37]@#H  "
 set -g status-right "#{?client_prefix,^Z  ,}#{?window_zoomed_flag,🔍  ,}#{?mouse,,#[dim]mouse:off#[nodim]  }"
 # https://github.com/tmux/tmux/issues/1500
-set-hook -g 'pane-mode-changed' 'set -gF status-style "bg=#{?#{==:#{pane_mode},copy-mode},colour237,default},bright"'
+set-hook -g 'pane-mode-changed' 'set -gF status-style "bg=#{?#{==:#{pane_mode},copy-mode},colour237,colour235},bright"'
 
 # Set non-active window title style.
 set -g window-status-format "#I:#W"
-setw -g window-status-style fg=white,bg=default,dim
+setw -g window-status-style fg=colour145,bg=colour235,dim
 
 # Set active window title style.
 set -g window-status-current-format "#I:#W"
-setw -g window-status-current-style fg=yellow,bg=default,bright
+setw -g window-status-current-style fg=colour180,bg=colour235,bright
 
 # Set bell style.
-set -g window-status-bell-style fg=red,bg=default,bright
+set -g window-status-bell-style fg=colour167,bg=colour235,bright
 
 # Make active pane more distinct.
-set -g pane-active-border-style fg=yellow,bg=default
+set -g pane-active-border-style fg=colour180,bg=colour235
 
 # Set pane border with current command.
 set -wg pane-border-status top
