--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -50,7 +50,7 @@ repos:
         args:
           - --autofix
           - --no-sort-keys
-        exclude: ^zed/.config/zed/settings.json$|^vscode/Library/Application\ Support/Code/User/settings.json$
+        exclude: ^vscode/Library/Application\ Support/Code/User/(keybindings|settings)\.json$|^zed/.config/zed/settings.json$
       - id: trailing-whitespace
         # keep-sorted end
   # keep-sorted start
