--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -59,6 +59,8 @@ repos:
     hooks:
       - id: codespell
         exclude: vim/.vim/autoload/plug.vim
+        args:
+          - -W iterm
   - repo: https://github.com/gitleaks/gitleaks
     rev: 2ca41cc1372d1e939a6a879f18cdc19fc1cac1ce # frozen: v8.30.0
     hooks:
