--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -77,6 +77,12 @@ repos:
     rev: 884e367e8fae92b238653fd950a54d235d418e4e # frozen: v0.20.0
     hooks:
       - id: yamlfmt
+  - repo: https://github.com/igorshubovych/markdownlint-cli
+    rev: 76b3d32d3f4b965e1d6425253c59407420ae2c43 # frozen: v0.47.0
+    hooks:
+      - id: markdownlint
+        args:
+          - --config=.markdownlintrc.json
   - repo: https://github.com/jmlrt/check-yamlschema
     rev: 907e5521b7f182966e59b1736ed1e5ba9eb24641 # frozen: v0.0.7
     hooks:
