--- a/profile/.profilerc
+++ b/profile/.profilerc
@@ -1,3 +1,5 @@
+#!/usr/bin/env bash
+
 # shellcheck source=/dev/null
 # Base shell functions for bash and zsh.
 
@@ -31,8 +33,8 @@ src_files() {
 # Usage: cdtmp [foo]
 # Creates temp dir with user, date, and optional prefix
 cdtmp() {
-	builtin cd "$(mktemp -d -t "$USER-${1:+$1-}$(date +%Y-%m-%d)-XXXXXX")" || return
-	builtin pwd
+        builtin cd "$(mktemp -d -t "$USER-${1:+$1-}$(date +%Y-%m-%d)-XXXXXX")" || return
+        builtin pwd
 }
 
 # vim: ft=sh
