--- a/starship/.config/starship.toml
+++ b/starship/.config/starship.toml
@@ -1,5 +1,5 @@
 # Minimal starship config matching grml prompt
-format = "$status$username$hostname$directory$git_branch$git_state$git_status$line_break$character"
+format = "$status$username$hostname$directory$git_branch$git_state$git_status$cmd_duration$line_break$character"
 add_newline = false
 
 [status]
@@ -21,7 +21,7 @@ truncate_to_repo = false
 format = "[$path](bold) "
 
 [git_branch]
-format = "[$branch]()"
+format = "[$branch]() "
 
 [git_state]
 format = "|[$state]()"
@@ -29,6 +29,10 @@ format = "|[$state]()"
 [git_status]
 format = " "
 disabled = true
+
+[cmd_duration]
+min_time = 2000
+format = "[$duration](yellow) "
 
 [character]
 success_symbol = "[❯](green)"
