git: drop stash

--- a/starship/.config/starship.toml
+++ b/starship/.config/starship.toml
@@ -27,7 +27,7 @@ format = "[$branch]() "
 format = "|[$state]()"
 
 [git_status]
-format = "[$all_status$ahead_behind](red) "
+format = "[$conflicted$deleted$renamed$modified$staged$untracked$ahead_behind](red) "
 
 [cmd_duration]
 min_time = 2000
