--- a/starship/.config/starship.toml
+++ b/starship/.config/starship.toml
@@ -1,5 +1,5 @@
 # Minimal starship config matching grml prompt
-format = "$status$username$hostname$directory$git_branch$git_state$git_status$cmd_duration$line_break$character"
+format = "$status$username$hostname$directory$git_branch$git_state$git_status$cmd_duration$jobs$line_break$character"
 add_newline = false
 
 [status]
@@ -32,6 +32,9 @@ format = "[$conflicted$deleted$renamed$modified$staged$untracked$ahead_behind](r
 [cmd_duration]
 min_time = 2000
 format = "[$duration](yellow) "
+
+[jobs]
+format = "[$number](cyan) "
 
 [character]
 success_symbol = "[❯](green)"
