starship: change sudo character to wizard

--- a/starship/.config/starship.toml
+++ b/starship/.config/starship.toml
@@ -41,7 +41,7 @@ format = "[$number](cyan) "
 
 [sudo]
 disabled = false
-format = "[🔓](red) "
+format = "[🧙](red) "
 
 [character]
 success_symbol = "[❯](green)"
