starship: prepend git to the branch name

--- a/starship/.config/starship.toml
+++ b/starship/.config/starship.toml
@@ -23,8 +23,8 @@ truncate_to_repo = true
 format = " [$path](bold) "
 
 [git_branch]
-symbol = ""
-format = "[$symbol$branch]() "
+symbol = "git:"
+format = "[$symbol$branch](bold cyan) "
 
 [git_state]
 format = "|[$state]()"
