ack: ignore .terraform

--- a/ack/.ackrc
+++ b/ack/.ackrc
@@ -8,6 +8,9 @@
 # upstream: https://github.com/beyondgrep/ack3/issues/370
 --type-add=txt=.txt
 
+# IaC
+--ignore-directory=.terraform/
+
 # ignore common third-party directories
 --ignore-directory=vendor/
 
