logseq: merge second brain config into global config

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -62,7 +62,7 @@ repos:
         exclude: vim/.vim/autoload/plug.vim
         args:
           - -L
-          - iterm,iTerm
+          - edn,iterm,iTerm
   - repo: https://github.com/gitleaks/gitleaks
     rev: 2ca41cc1372d1e939a6a879f18cdc19fc1cac1ce # frozen: v8.30.0
     hooks:
