Add .codespell-ignore-words.txt and migrate codespell ignores from config

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -61,8 +61,7 @@ repos:
       - id: codespell
         exclude: vim/.vim/autoload/plug.vim
         args:
-          - -L
-          - edn,iterm,iTerm
+          - --ignore-words=.codespell-ignore-words.txt
   - repo: https://github.com/gitleaks/gitleaks
     rev: 2ca41cc1372d1e939a6a879f18cdc19fc1cac1ce # frozen: v8.30.0
     hooks:
