opencode: use jsonc

--- a/opencode/.config/opencode/opencode.jsonc
+++ b/opencode/.config/opencode/opencode.jsonc
@@ -8,5 +8,6 @@
     "doom_loop": "ask",
     "external_directory": "ask"
   },
-  "share": "disabled"
+  // https://opencode.ai/docs/config#sharing
+  "share": "disabled",
 }
