--- a/opencode/.config/opencode/opencode.jsonc
+++ b/opencode/.config/opencode/opencode.jsonc
@@ -8,6 +8,8 @@
     "doom_loop": "ask",
     "external_directory": "ask"
   },
+  // https://opencode.ai/docs/config#default-agent
+  "default_agent": "plan",
   // https://opencode.ai/docs/config#sharing
   "share": "disabled",
 }
