--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -107,8 +107,10 @@ repos:
     hooks:
       - id: talisman-commit
         entry: cmd --githook pre-commit
+        exclude: ^nvim/.config/nvim/lazy-lock\.json$
       - id: talisman-push
         entry: cmd --githook pre-push
+        exclude: ^nvim/.config/nvim/lazy-lock\.json$
   - repo: https://github.com/woodruffw/zizmor-pre-commit
     rev: ea18690d7f8e44203c9efd7bc6229447d02e3951 # frozen: v1.19.0
     hooks:
