--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -50,7 +50,7 @@
 	# log: there's also gitk and tig
 	# ll adapted from https://registerspill.thorstenball.com/p/how-i-use-git
 	ll = log --graph --pretty=tformat:'%C(always,yellow)%h%C(always,reset) %C(always,green)%<(25,trunc)%ar%C(always,reset) %C(always,bold blue)%<(20,trunc)%an%C(always,reset) %C(always,red)%d%C(always,reset) %s'
-	xl = branch -vv
+	xl = !git branch -vv | grep -v "archive/"
 
 	# hg/fig/depot_tools compatibility
 	# keep-sorted start
