--- a/mr/.mrconfig
+++ b/mr/.mrconfig
@@ -38,4 +38,4 @@ checkout = git clone 'git@github.com:thiagowfx/pre-commit-hooks' 'pre-commit-hoo
 skip = lazy
 
 # chain corp repositories (skip if running from within Corp to avoid duplicates)
-include = test -f $HOME/Corp/.mrconfig && case "$PWD" in "$(cd "$HOME/Corp" 2>/dev/null && pwd -P)"*|"$HOME/Corp"*) ;; *) sed '/^\[DEFAULT\]/,/^$/d; s|^\[\([^/DEFAULT]\)|[Corp/\1|' $HOME/Corp/.mrconfig;; esac || true
+include = test -f $HOME/Corp/.mrconfig && ! pwd -P | grep -q "^$(cd "$HOME/Corp" 2>/dev/null && pwd -P)" && sed '/^\[DEFAULT\]/,/^$/d; s|^\[\([^/DEFAULT]\)|[Corp/\1|' $HOME/Corp/.mrconfig || true
